# wasmin-lang

./: Cargo.toml  README.md
examples/html/fizz-buzz/: .gitignore  Makefile  fizz_buzz.html  fizz_buzz.wasmin
examples/wasmin/: area.wasmin  console_log.wasmin  counter.wasmin  factorial.wasmin  multi_value.wasmin  multi_value_if_block.wasmin
examples/wat/: hello_world.wat  tests.wat
src/: ast.rs  compilation.rs  errors.rs  interner.rs  lib.rs  main.rs  parse.rs  tests.rs  types.rs  vec_utils.rs  wasm.rs  wasm_funs.rs
src-old/: ast.rs  lib.rs  tests.rs  types.rs  vec_utils.rs
src-old/lexer/: mod.rs  model.rs  str.rs
src-old/parse/: expr_parser.rs  ext_parser.rs  fun_parser.rs  macros.rs  parser.rs  stack.rs  tests.rs  top_level_parser.rs  type_parser.rs
src-old/sink/: wasm.rs  wasm_utils.rs
src-old/wasm_parse/: mod.rs
src/cli/: mod.rs  options.rs  runner.rs
src/conversions/: expression.rs  mod.rs  types.rs
src/lexer/: mod.rs  model.rs  str.rs
src/parse/: expr_parser.rs  expression.rs  ext_parser.rs  fun.rs  fun_parser.rs  ifs.rs  lets.rs  lex.rs  macros.rs  mod.rs  model.rs  number.rs  parse.rs  parser.rs  scope.rs  stack.rs  state.rs  structs.rs  tests.rs  top_level_parser.rs  type_check.rs  type_parser.rs  types.rs
src/parse2/: ast.rs
src/sink/: debug.rs  mod.rs  wasm.rs  wasm_utils.rs  wat.rs
src/wasm_parse/: mod.rs
tests/: happy_path_test.rs  lexer_tests.rs  parser_tests.rs
tests-old/: lexer_tests.rs  parser_tests.rs
