[package]
name = "wasmin"
version = "0.1.0"
authors = ["Renato Athaydes <renato@athaydes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.11.0"
structopt = "0.3.21"
wasm-encoder = "0.4.0"
wasmparser = "0.72.0"
unicode-segmentation = "1.8.0"
regex = "1.5.4"
lazy_static = "1.4.0"