[package]
name = "wasmin"
version = "0.1.0"
authors = ["Renato Athaydes <renato@athaydes.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
structopt = "0.3.21"
wasm-encoder = "0.27.0"
wasmparser = "0.105.0"